@@ -1,3 +1,6 @@
+2010-10-13  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/menus.jl: "Poweroff" bugfix (again).
+
 2010-10-12  Teika kazura <teika@lavabit.com>
 	* lisp/sawfish/wm/menus.jl: "Poweroff" bugfix.
 	In 1.7.0, poweroff related commands under root-menu -> session can't
